syntax = "proto3";
option csharp_namespace = "PresalesApp.Web.Shared";
package app;

import "types.proto";
import "enums.proto";
import "identity.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

service Api {
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc Register(RegisterRequest) returns (LoginResponse);
	rpc GetUserProfile(google.protobuf.Empty) returns (UserInfoResponse);

	rpc GetRoles(identity.Query) returns (identity.Roles);
	rpc CreateRole(identity.Role) returns (identity.NullableRole);
	rpc DeleteRole(identity.Role) returns (identity.NullableRole);

	rpc GetOverview(OverviewRequest) returns (Overview);
	rpc GetNames(google.protobuf.Empty) returns (NamesResponse);
	rpc GetKpi(KpiRequest) returns (KpiResponse);
	rpc GetImage(ImageRequest) returns (ImageResponse);
	rpc GetProfitOverview(OverviewRequest) returns (ProfitOverview);
	rpc GetSalesOverview(SalesOverviewRequest) returns (SalesOverview);
	rpc GetUnpaidProjects(UnpaidRequest) returns (UnpaidProjects);
	rpc GetFunnelProjects(google.protobuf.Empty) returns (FunnelProjects);
}

message FunnelProjects {
	repeated Project projects = 1;
}

message UserInfo {
	string token = 1;
	UserProfile profile = 2;
}

message UserProfile {
	string name = 1;
}

message LoginRequest {
	string login = 1;
	string password = 2;
}

message RegisterRequest {
	LoginRequest login_request = 1;
	UserProfile profile = 2;
}

message LoginResponse {
	oneof result {
		Error error = 1;
		UserInfo user_info = 2;
	}
}

message UserInfoResponse {
	oneof result {
		Error error = 1;
		UserProfile profile = 2;
	}
}

message UnpaidRequest{
	string presale_name = 1;
	Period period = 2;
	bool is_main_project_include = 3;
}

message UnpaidProjects {
	repeated Project projects = 1;
}

message SalesOverviewRequest {
	Period previous = 1;
	Period current = 2;
}

message SalesOverview {
	types.DecimalValue previous_actual_profit = 1;
	types.DecimalValue current_actual_profit = 2;
	types.DecimalValue current_sales_target = 3;
	repeated Manager current_top_sales_managers = 4;
}

message Manager {
	string name = 1;
	types.DecimalValue profit = 2;
}

message ProfitOverview {
	repeated Presale presales = 1;
	types.DecimalValue plan = 2;
	types.DecimalValue left = 3;
	map<string, types.DecimalValue> profit = 4;
	types.DecimalValue actual = 5;
}

message ImageRequest {
	string keyword = 1;
	enums.ImageOrientation orientation = 2;
	enums.ImageKeywordType keyword_type = 3;
}

message ImageResponse {
	string raw = 1;
	string full = 2;
	string regular = 3;
	string small = 4;
	string thumb = 5;
	string small_s3 = 6;
	string alt_description = 7;
	string author_name = 8;
	string author_url = 9;
	string source_name = 10;
	string source_url = 11;
	bool liked = 12;
	string id = 13;
}

message KpiRequest{
	string presale_name = 1;
	Period period = 2;
}

message KpiResponse {
	oneof result {
		Kpi kpi = 1;
		Error error = 2;
	}
}

message Kpi {
	repeated Invoice invoices = 1; 
}

message Error {
	string message = 1;
}

message Invoice {
	string counterpart = 1;
	string number = 2;
	google.protobuf.Timestamp date = 3;
	types.DecimalValue amount = 4;
	types.DecimalValue cost = 5;
	types.DecimalValue sales_amount = 6;
	double percent = 7;
	types.DecimalValue profit = 8;
	repeated Project projects_found = 9;
	repeated Project projects_ignored = 10;
	repeated Action actions_tallied = 11;
	repeated Action actions_ignored = 12;
	google.protobuf.Timestamp last_pay_at = 13;
	google.protobuf.Timestamp last_shipment_at = 14;
	int32 rank = 15;
}

message NamesResponse {
	repeated string names = 1;
}

message Period {
	google.protobuf.Timestamp from = 1;
	google.protobuf.Timestamp to = 2;
}

message OverviewRequest {
	Period period = 1;
	enums.Department Department = 2;
	enums.Position Position = 3;
	bool only_active = 4;
}

message Overview {
	repeated Presale presales = 1;
	Statistic statistics = 2;
	google.protobuf.Duration avg_director_time_to_reaction = 3;
	repeated Project escalations = 4;
	repeated Project forgotten = 5;
	repeated Project new = 6;
	repeated Project waiting = 7;
}

message Presale {
	string name = 1;
	Statistic statistics = 2;
	enums.Department Department = 3;
	enums.Position Position = 4;
	bool is_active = 5;
}

message Statistic {
	int32 in_work = 1;
	int32 assign = 2;
	int32 won = 3;
	int32 loss = 4;
	int32 abnd = 5;
	double conversion = 6;
	google.protobuf.Duration avg_time_to_win = 7;
	google.protobuf.Duration avg_time_to_reaction = 8;
	double avg_rank = 9;
	google.protobuf.Duration avg_spend = 10;
	google.protobuf.Duration sum_spend = 11;
	types.DecimalValue profit = 12;
	types.DecimalValue potential = 13;
	int32 invoices = 14;
	int32 invoices_shipped = 15;
}

message Project {
	string number = 1;
	string name = 2;
	google.protobuf.Timestamp approval_by_tech_director_at = 3;
	google.protobuf.Timestamp approval_by_sales_director_at = 4;
	google.protobuf.Timestamp presale_start_at = 5;
	Presale presale = 6;
	enums.ProjectStatus status = 7;
	google.protobuf.Timestamp closed_at = 8;
	repeated Invoice invoices = 9;
	repeated Action actions = 10;
	types.DecimalValue potential = 11;
	enums.FunnelStage funnel_stage = 12;
}

message Action {
	string project_number = 1;
	int32 number = 2;
	google.protobuf.Timestamp date = 3;
	enums.ActionType type = 4;
	google.protobuf.Duration timespend = 5;
	string description = 6;
	bool sales_funnel = 7;
}